
5.2b1 -> 5.3a1
    - jbj: add spooktool (i.e. semodule with an augtool-like interpreter).
    - jbj: rpmsm: ensure pool memory is initialized correctly.
    - jbj: rpmaug: use the rpmio parser.
    - jbj: rpmio: expose the toy parser and command table used by augtool.
    - jbj: retrofit getline for augtool to build more portably.
    - jbj: retrofit asprintf for augtool to build more portably.
    - jbj: AutoFu for -lreadline to be included in spooktool(8).
    - jbj: rpmsm: stub-in a state machine for handling policy operations lazily.
    - jbj: rpmsm: add RPMSM_FLAGS_CONNECT for Tresys dain bramaged patches.
    - jbj: rpmsm: use an iob to return spewage.
    - jbj: rpmsm: permit *RE's with -l,--list command. hmmm, semodule todo++.
    - jbj: rpmsm: return "N-V" as moudular policy identifier string.
    - jbj: rpmsm: drill a string result pointer into semodule methods.
    - jbj: add semodule helper.
    - jbj: rpmsm: add rpmsmRun() method for semodule.
    - jbj: rpmsp: open and load a policydb from a file.
    - jbj: js: stub-in Sm/Sp classes for rpmsm/rpmsp objects.
    - jbj: stub-in a wrapper for -lsepol methods.
    - jbj: use RPM_CHECK_LIB() to detect -lsepol.
    - jbj: rpmsm: add creator/destructor methods to populate the wrapper.
    - jbj: stub-in a wrapper for -lsemanage methods.
    - jbj: use RPM_CHECK_LIB() to detect -lsemanage.
    - jbj: use RPM_CHECK_LIB() to detect -lselinux.
    - jbj: retrofit TIMFOO_TO_TIMEBAR macros for the truly deprived.
    - jbj: retrofit *BSD st_[acm]timespec names if possible.
    - jbj: use HAVE_STRUCT_STAT_ST_BIRTHTIME, retrofit st_ctime for the deprived.
    - jbj: use the AutoFu.
    - jbj: system: add AutoFu for S_ISTXT <-> S_ISVTX *shrug*.
    - jbj: use the new rpmio wrappers.
    - jbj: rpmio: add Lchmod/Chflags/Lchflags/Fchflags wrappers.
    - jbj: permit HMAC's to be substituted for digests in *.rpm.
    - jbj: reserve a bit to mark file HMAC's.